# vitaki-fork

./: .appveyor.yml  .gitignore  .gitmodules  CMakeLists.txt  README.md
.builds/: android.yml  common.yml  openbsd.yml
.github/ISSUE_TEMPLATE/: bug_report.md
android/app/: build.gradle
android/app/src/main/java/com/metallic/chiaki/stream/: StreamActivity.kt
gui/: CMakeLists.txt
gui/include/: controllermanager.h  streamsession.h  streamwindow.h
gui/src/: controllermanager.cpp  mainwindow.cpp  streamsession.cpp  streamwindow.cpp
lib/: CMakeLists.txt
lib/include/chiaki/: config.h  ctrl.h  discovery.h  regist.h  session.h  sock.h  stoppipe.h  streamconnection.h  thread.h
lib/src/: common.c  congestioncontrol.c  controller.c  ctrl.c  discovery.c  discoveryservice.c  feedbacksender.c  frameprocessor.c  gkcrypt.c  http.c  opusdecoder.c  regist.c  senkusha.c  session.c  sock.c  stoppipe.c  streamconnection.c  takion.c  takionsendbuffer.c  thread.c  time.c  utils.h  videoreceiver.c
lib/src/remote/: holepunch-test.c  holepunch.c  rudpsendbuffer.c
scripts/: appveyor-win.sh  build-sdl2.sh
scripts/vita/: build.sh  devtool.py  tail.sh
scripts/vita/parse_core/: core.py  elf.py  main.py  util.py
vita/: CMakeLists.txt  README.md
vita/include/: audio.h  config.h  context.h  controller.h  discovery.h  host.h  message_log.h  ui.h  util.h  video.h
vita/res/: hostsettings.xml
vita/res/livearea/contents/: template.xml  template.xml.format
vita/src/: audio.c  config.c  context.c  controller.c  discovery.c  host.c  main.c  message_log.c  ui.c  util.c  video.c
